# CoT-compression

./: .gitignore  README.md  csv_to_jsonl.py  pyproject.toml  run_inference.py  run_with_config.py  setup_env.sh  simple_model_call.py
base_code/: data_loader.py  evaluator.py  main.py  model_inference.py
data/: input.csv  input.jsonl  submit_example.csv  training_dataset.jsonl
sft/: README.md
sft/configs/: financial_training.yaml  lora_config.yaml  single_gpu_test.yaml
sft/data/: financial_training_data.jsonl  mock_test_data.jsonl  sample_data.jsonl
sft/scripts/: cleanup_old_outputs.sh  debug_lora.py  merge_lora.py  merge_lora.sh  prepare_data.py  quick_merge.py  start_training.sh  train_lora.py
sh/: start_vllm_server.sh  stop_vllm_server.sh
src/: __init__.py
src/core/: __init__.py  data_loader.py
src/evaluation/: __init__.py  evaluator.py
src/inference/: __init__.py  model_inference_vllm_concurrent.py
src/scripts/: __init__.py  main_vllm_concurrent.py
vllm_code/: config.json  main_vllm_concurrent.py
